# ABMCourseWork

./: .gitignore  README.md  README2.txt  agents.py  app.py  demo.html  demo.ipynb  demo.py  environment.py  main.py  parameters.py  plotgenerator.py  pyproject.toml  time_dynamics.csv  time_dynamics_m2.csv
M1opiniondynamics/: README.txt  model.py  plotgenerator.py
M2opiniondynamics/: agents.py  environment.py  model.py  parameters.py
M3SuppyChainModelling/: README.md  economy.py  firm.py  parameters.py
M4NewDelhiRailwayStation/: environment.py  parameters.py  passengers.py  visualise.py
M5SupplyChainCalibration/: environment.py  firms.py  parameters.py
M6Study/: agents.py  environment.py  model.py  parameters.py
