[project]
name = "ABMcourseWork"
version = "0.1.0"
description = "Agent Based Modelling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairocffi>=1.7.1",
    "igraph>=1.0.0",
    "jupyter>=1.1.1",
    "marimo[recommended]>=0.18.4",
    "matplotlib>=3.10.8",
    "pycairo>=1.29.0",
]
